--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html,body{
     font-family: sans-serif;
+    font-size: medium;
 }
 
 
@@ -18,6 +19,11 @@ textarea{
     direction: auto;
     unicode-bidi: plaintext;
     font-family: sans-serif;
+}
+
+textarea, select, input, button{
+    font-size: inherit;
+
 }
 
 textarea.healthy{
