--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html,body{
     font-family: sans-serif;
-    font-size: medium;
+    font-size: large;
+    font-weight: bold;
 }
 
 
@@ -23,6 +24,7 @@ textarea{
 
 textarea, select, input, button{
     font-size: inherit;
+    font-weight: inherit;
 
 }
 
@@ -33,6 +35,7 @@ textarea.healthy{
 
 .unhealthy:enabled{
     background-color: red;
+    color: white;
 }
 
 .child{
