--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html,body{
     font-family: sans-serif;
     font-size: large;
     font-weight: bold;
+    background-color: black;
 }
 
 
@@ -11,7 +12,7 @@ html,body{
     background-color: palegoldenrod;
     border-radius: 3px;
     padding: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 7px;
 }
 
 textarea{
